# bazel-python-demo

./: .gitignore  BUILD.bazel  WORKSPACE  gazelle_python.yaml  requirements.txt  requirements_lock.txt
codingbot/: BUILD.bazel  __main__.py  codingbot.py
langchain/: BUILD.bazel  __main__.py  demo.py
